Fixed viewport bug on mobile

--- a/src/scss/components/components.animations.scss
+++ b/src/scss/components/components.animations.scss
@@ -10,10 +10,10 @@
 
 .left_image, .right_image {
   animation-duration: 3s;
-  animation-delay: 2s;
+  animation-delay: 1s;
 }
 
 .contact__animation, .language__animation {
   animation-duration: 3s;
-  animation-delay: 1s;
+  animation-delay: 0.5s;
 }
