--- a/src/scss/components/components.buttons.scss
+++ b/src/scss/components/components.buttons.scss
@@ -1,6 +1,6 @@
 .toggle-btn {
   background: transparent;
-  color: #ffffff;
+  color: #8a8a8a;
   position: fixed;
   z-index: 1;
   width: 40px;
