--- a/src/scss/components/components.header.scss
+++ b/src/scss/components/components.header.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-top: 100px;
+    //padding-top: 100px;
     background-color: transparent;
 
     .picture-div {
@@ -40,5 +40,14 @@
       color: white;
       text-align: center;
     }
+  }
+
+
+  .arrow__button {
+    width: 100%;
+    margin: 50px  0 50px 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
   }
 }
