--- a/src/scss/components/components.navbar.scss
+++ b/src/scss/components/components.navbar.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 100;
+  z-index: 9;
 }
 
 .menu {
@@ -43,7 +43,7 @@
   height: 100%;
   background-color: rgba(204, 204, 204, 0.9);
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   left: -250px;
   transition: 0.3s left ease-in;
 
@@ -65,6 +65,6 @@
 }
 
 .__has-background {
-  background-color: rgba(204, 204, 204, 0.6);
-  opacity: 0.8;
+  background-color: rgba(204, 204, 204, 0.9);
+  //opacity: 0.8;
 }
