--- a/src/scss/settings/settings.main.scss
+++ b/src/scss/settings/settings.main.scss
@@ -1,4 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Muli');
-$main-font: 'Muli', sans-serif;
+$main-font: 'Muli', Helvetica;
 $main-font-size: 18px;
 $big-font-size: 22px;
